borsh-derive/src/internals/deserialize/enums/snapshots/borsh_skip_struct_variant_field.snap
---
source: borsh-derive/src/internals/deserialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::de::BorshDeserialize for AA {
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let tag = <u8 as borsh::de::BorshDeserialize>::deserialize_reader(reader)?;
        <Self as borsh::de::EnumExt>::deserialize_variant(reader, tag)
    }
}
impl borsh::de::EnumExt for AA {
    fn deserialize_variant<__R: borsh::io::Read>(
        reader: &mut __R,
        variant_tag: u8,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        let return_value = if variant_tag == 0u8 {
            AA::B {
                c: ::core::default::Default::default(),
                d: <u32 as borsh::BorshDeserialize>::deserialize_reader(reader)?,
            }
        } else if variant_tag == 1u8 {
            AA::NegatedVariant {
                beta: <u8 as borsh::BorshDeserialize>::deserialize_reader(reader)?,
            }
        } else {
            return ::core::result::Result::Err(
                borsh::io::Error::new(
                    borsh::io::ErrorKind::InvalidData,
                    borsh::__private::maybestd::format!(
                        "Unexpected variant tag: {:?}", variant_tag
                    ),
                ),
            )
        };
        ::core::result::Result::Ok(return_value)
    }
}
